@@ -1,3 +1,7 @@
+drkns 09.07.2016 22:56:35 +0200 - build 4742
+
+1. Ansi-плагины, у которых ресурсы недостаточно хороши, могли не загружаться.
+
 drkns 09.07.2016 01:21:52 +0200 - build 4741
 
 1. И ещё один баг там же.
